Update dotStartup.sh